// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformApiToInternalItem extracts and transforms the proper data for a assignment response 1`] = `
Object {
  "completed": false,
  "context": Object {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2017-05-19T05:59:59Z",
  "dateBucketMoment": "2017-05-19T00:00:00.000Z",
  "html_url": "/courses/1/assignments/10",
  "id": "10",
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": 50,
  "status": false,
  "title": "How to be neutral",
  "type": "Assignment",
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a discussion response 1`] = `
Object {
  "completed": undefined,
  "context": Object {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": undefined,
  "date": "2017-05-19T05:59:59Z",
  "dateBucketMoment": "2017-05-19T00:00:00.000Z",
  "html_url": "/courses/1/discussion_topics/10",
  "id": "1",
  "overrideAssignId": 9,
  "overrideId": null,
  "points": 40,
  "status": false,
  "title": "How to make enemies",
  "type": "Discussion",
  "unread_count": 0,
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a graded discussion reponse with an unread count 1`] = `
Object {
  "completed": undefined,
  "context": Object {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": undefined,
  "date": "2017-05-19T05:59:59Z",
  "dateBucketMoment": "2017-05-19T00:00:00.000Z",
  "html_url": "/courses/1/discussion_topics/10",
  "id": "1",
  "overrideAssignId": 9,
  "overrideId": null,
  "points": 40,
  "status": Object {
    "submitted": true,
    "unread_count": 10,
  },
  "title": "How to make enemies",
  "type": "Discussion",
  "unread_count": 10,
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a graded discussion response 1`] = `
Object {
  "completed": undefined,
  "context": Object {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": undefined,
  "date": "2017-05-15T16:32:34Z",
  "dateBucketMoment": "2017-05-15T00:00:00.000Z",
  "html_url": "/courses/1/discussion_topics/10",
  "id": "1",
  "overrideAssignId": 10,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "How to make friends part 2",
  "type": "Discussion",
  "unread_count": 0,
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a planner_note response 1`] = `
Object {
  "completed": undefined,
  "context": Object {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Planner Note",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2017-05-19T05:59:59Z",
  "dateBucketMoment": "2017-05-19T00:00:00.000Z",
  "html_url": undefined,
  "id": 10,
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "Some To Do Note",
  "type": "To Do",
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a planner_note response without an associated course 1`] = `
Object {
  "completed": undefined,
  "course_id": undefined,
  "date": "2017-05-19T05:59:59Z",
  "dateBucketMoment": "2017-05-19T00:00:00.000Z",
  "html_url": undefined,
  "id": 10,
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "Some To Do Note",
  "type": "To Do",
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a quiz response 1`] = `
Object {
  "completed": false,
  "context": Object {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2017-05-19T05:59:59Z",
  "dateBucketMoment": "2017-05-19T00:00:00.000Z",
  "html_url": "/courses/1/assignments/10",
  "id": "10",
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": 100,
  "status": false,
  "title": "How to make friends",
  "type": "Quiz",
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for an announcement response 1`] = `
Object {
  "completed": undefined,
  "context": Object {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": undefined,
  "date": "2017-05-15T16:32:34Z",
  "dateBucketMoment": "2017-05-15T00:00:00.000Z",
  "html_url": "/courses/1/discussion_topics/10",
  "id": "1",
  "overrideAssignId": 9,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "",
  "type": "Announcement",
}
`;
